test/bad/type_missmatch_26.mpp
print 3.14 || false;
